# pybase

./: README.md  pyproject.toml
.github/workflows/: github-actions.yml
docs/: index.md  main.md
pybase/: main.py
tests/: test_example.py
